--- a/GarageSale/Base.lproj/Main.storyboard
+++ b/GarageSale/Base.lproj/Main.storyboard
@@ -11,30 +11,35 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Sale Map View Controller-->
         <scene sceneID="zDv-z3-1b9">
             <objects>
-                <viewController id="UNy-Nx-2Si" sceneMemberID="viewController">
+                <viewController id="UNy-Nx-2Si" customClass="SaleMapViewController" customModule="GarageSale" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Hxk-NE-Ka9">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Map" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nde-n8-vdm">
-                                <rect key="frame" x="166" y="323" width="34" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="ZlA-dJ-wML">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ZlA-dJ-wML" firstAttribute="leading" secondItem="r2D-Yz-wRH" secondAttribute="leading" id="51g-r7-7Mq"/>
+                            <constraint firstItem="ZlA-dJ-wML" firstAttribute="top" secondItem="r2D-Yz-wRH" secondAttribute="top" id="E7t-0H-2yZ"/>
+                            <constraint firstItem="r2D-Yz-wRH" firstAttribute="trailing" secondItem="ZlA-dJ-wML" secondAttribute="trailing" id="RlW-pq-0oj"/>
+                            <constraint firstItem="r2D-Yz-wRH" firstAttribute="bottom" secondItem="ZlA-dJ-wML" secondAttribute="bottom" id="W2M-Pk-RK7"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="r2D-Yz-wRH"/>
                     </view>
                     <navigationItem key="navigationItem" id="hSJ-QF-bOU"/>
+                    <connections>
+                        <outlet property="map" destination="ZlA-dJ-wML" id="WXx-IF-d9E"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Srh-Yg-zO7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1876" y="1268"/>
+            <point key="canvasLocation" x="1876" y="1267.9160419790105"/>
         </scene>
         <!--Sale List View Controller-->
         <scene sceneID="Ofg-VP-E5y">
