--- a/GarageSale/Base.lproj/Main.storyboard
+++ b/GarageSale/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="hSJ-QF-bOU"/>
                     <connections>
-                        <outlet property="map" destination="ZlA-dJ-wML" id="WXx-IF-d9E"/>
+                        <outlet property="saleMap" destination="ZlA-dJ-wML" id="WXx-IF-d9E"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Srh-Yg-zO7" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -121,6 +121,12 @@
                     <view key="view" contentMode="scaleToFill" id="peY-dc-6ss">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="2om-BW-OPv">
+                                <rect key="frame" x="0.0" y="129" width="375" height="408"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="Ku4-g9-fks"/>
                     </view>
@@ -136,10 +142,13 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="newLocationMap" destination="2om-BW-OPv" id="SE5-gT-9CP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vS6-k0-Ppn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3977" y="565"/>
+            <point key="canvasLocation" x="3976.8000000000002" y="564.46776611694156"/>
         </scene>
         <!--Garage Sale Date-->
         <scene sceneID="JtQ-i6-zyB">
@@ -250,11 +259,11 @@
             </objects>
             <point key="canvasLocation" x="-29" y="900"/>
         </scene>
-        <!--Item 1-->
+        <!--List-->
         <scene sceneID="vw0-My-hYu">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="c7Q-jR-7hG" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 1" id="IHO-zn-hsS"/>
+                    <tabBarItem key="tabBarItem" title="List" id="IHO-zn-hsS"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="F7A-IV-GOg">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
@@ -269,11 +278,11 @@
             </objects>
             <point key="canvasLocation" x="923.20000000000005" y="566.71664167916049"/>
         </scene>
-        <!--Item 2-->
+        <!--Map-->
         <scene sceneID="Wgn-fX-2ra">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="2YN-bj-RoF" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item 2" id="bHb-hB-Q7g"/>
+                    <tabBarItem key="tabBarItem" title="Map" id="bHb-hB-Q7g"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="OzO-OX-ZM6">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
